infra/api-gateway/ingress.yaml
kind: Service
apiVersion: v1
metadata:
  name: otus-auth-service
spec:
  type: ExternalName
  externalName: otus-auth-service.auth-service.svc.cluster.local
---
kind: Service
apiVersion: v1
metadata:
  name: otus-billing-service
spec:
  type: ExternalName
  externalName: otus-billing-service.billing-service.svc.cluster.local
---
kind: Service
apiVersion: v1
metadata:
  name: otus-user-service
spec:
  type: ExternalName
  externalName: otus-user-service.user-service.svc.cluster.local
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/auth-url: http://otus-auth-service.auth-service.svc.cluster.local/auth
    nginx.ingress.kubernetes.io/auth-response-headers: x-user-id
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /api/v1/user
            pathType: Prefix
            backend:
              service:
                name: otus-user-service
                port:
                  number: 80
          - path: /payments
            pathType: Prefix
            backend:
              service:
                name: otus-billing-service
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-service
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: otus-auth-service
                port:
                  number: 80
